# BigKuery-Calculator

./: .gitignore  README.md  main.py  pyproject.toml
bigkuery/: __init__.py
bigkuery/core/: __init__.py  context.py  error_messages.py  evaluator.py  math_functions.py  parser.py  plotting.py  solver.py  tokenizer.py
bigkuery/gui/: button_panel.py  input_widget.py  main_window.py  math_view.py  output_display.py  settings_dialog.py
bigkuery/gui/assets/: katex_host.html
bigkuery_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scratch/: debug_steps.py  debug_steps_verbose.py  test_propagation.py  test_size.py  test_steps.py  test_window.py
tests/: conftest.py  test_accuracy.py  test_big_float.py  test_error_messages.py  test_evaluator.py  test_gui.py  test_memory.py  test_parser.py  test_plotting.py  test_solver.py
