[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bigkuery-calculator"
version = "1.0.0"
description = "Arbitrary precision scientific calculator with symbolic math"
authors = [
    {name = "BigKuery", email = "contact@bigkuery.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["calculator", "arbitrary-precision", "math", "scientific"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "PyQt6>=6.4.0",
    "PyQt6-WebEngine>=6.4.0",
    "sympy>=1.12",
    "mpmath>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
]

[project.scripts]
bigkuery = "bigkuery.__main__:main"

[project.gui-scripts]
bigkuery-gui = "bigkuery.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bigkuery*"]

[tool.setuptools.package-data]
"bigkuery.gui" = [
    "assets/*.html",
    "assets/katex/*.css",
    "assets/katex/*.js",
    "assets/katex/fonts/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
